--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -1634,7 +1634,7 @@
 	}
 
 	body, input, select, textarea {
-		font-family: "Poppins", sans-serif;
+		font-family: "Courier", sans-serif;
 		font-weight: 300;
 		font-size: 1rem;
 		line-height: 1.65;
@@ -1809,7 +1809,7 @@
 
 	.box {
 		margin-bottom: 2rem;
-		background: #FFF;
+		background: #696969;
 	}
 
 		.box .image.fit {
@@ -3099,7 +3099,7 @@
 		.wrapper.style3 {
 			background-color: #000;
 			color: #bfbfbf;
-			background-image: url(../../images/bg.jpg);
+			background-image: url(../../images/Carreras.jpg);
 			background-size: cover;
 			background-attachment: fixed;
 			background-position: center;
@@ -4283,12 +4283,12 @@
 
 	#footer {
 		padding: 4rem 0 2rem 0 ;
-		background: #000;
+		background: #483D8B;
 		text-align: center;
 	}
 
 		#footer a {
-			color: rgba(255, 255, 255, 0.5);
+			color: rgba(25, 255, 255, 0.5);
 		}
 
 			#footer a:hover {
